/*
 * CHANGELOG.
 */

03262007 - Tons of Unicode work in windows.c ... should now use UCS-2 on
           NT/XP/Vista/etc versions of the OS, and fallback to "ANSI" versions
           for 95/98/ME, tapdancing around the system codepage if it has to.
           Since the Unicode entry points are dynamically loaded, it won't
           have issues with missing symbols on Win9x, nor does it need to be
           built separately with #define UNICODE (although it will work the
           same with or without this define, as it doesn't use TCHARs or
           the non-[WA] versions of APIs. Other minor Windows cleanups and
           corrections.
03252007 - Improved dynamic loader and initial Unicode work in windows.c ...
03242007 - Replaced BeOS semaphores with BLockers for the mutex implementation.
           It's much simpler, it has "benaphores" built in behind the scenes
           for faster performance, and it's recursive...also, we were
           previously setting the PhysicsFS error state if BeOS mutex grabbing
           failed (a big no no!), and that's now fixed. Good wins all around.
03222007 - Replaced some Malloc and all the alloca() calls with
           __PHYSFS_smallAlloc(), which will stack allocate small (128 or
           less bytes) blocks and Malloc the rest...naturally these now have
           to be paired with __PHYSFS_smallFree() calls, so you can't be as
           lazy as a basic alloca() would let you be. The benefit is both less
           malloc pressure for those temporary allocations and better stack
           overflow safety (so if some jerk tries to push a 78 megabyte string
           through the library as a filename, we won't try to strcpy it to
           the stack). Hopefully some internal interfaces can now get
           refactored to stop generating heap pointers and let the caller use
           smallAlloc to further reduce malloc pressure.
03212007 - Replaced LONGLONGLITERAL with __PHYSFS_UI64/__PHYSFS_SI64 ...